updated package.json to publish package

--- a/package.json
+++ b/package.json
@@ -1,7 +1,26 @@
 {
   "name": "react-sprite-animation",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "author": {
+    "name": "Raghu Ram M",
+    "email": "mraghuram3@gmail.com"
+  },
+  "keywords": [
+    "react",
+    "sprite",
+    "animation"
+  ],
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jawblia/npm-test.git"
+  },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "@testing-library/jest-dom": "^5.16.5",
