--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jawblia/npm-test.git"
+    "url": "git+https://github.com/mraghuram3/react-sprite-animationt.git"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
